2001-01-11  Dancer Vesperman <dancer@users.sourceforge.net>
	* No more chipmunk VOC's for SI. Another false sample rate

2001-01-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Weather intrinsics implemented, also 'Ambrosia' rain.

2001-01-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* files/utils.cc: always #include <unistd.h> (not just on MacOS)

2001-01-10  Max Horn  <max@quendi.de>
	* autoarray.h: added check for access to negative indices
	* game.cc: changed to use U7chdir instead of chdir
	* gamedat.cc: changed to use U7mkdir instead of mkdir
	* audio/Audio.h: removed not needed #include "utils.h"
	* audio/Mixer.cc: re-enabled audio on MacOS
	* audio/xmidi.cc: fixed namespace std issues
	* files/utisl.cc/h: added U7mkdir and U7chdir for portability reasons. Also augmented switch_slashes()

2001-01-09  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Schedules take effect immediately.
	* SI - Guard opens gate (Intrinsic 0xc1 added).
	* SI - Starting scene works!!  (Well somewhat, and you do have to
	wait several seconds, hanging around the bunny.)
	* Usecode compiler - 1st pass pretty much complete.

2001-01-10  Ryan Nunn <triforce@merlin.net.au>
	* gamma.h : Gamma Table Class
	* Makefile.am : Added gamma.h
	* Makefile.Win32 : Fixed 'Clean'
	* bggame.cc : Faster Fades in Endgame
	* effects.* : Attempting to prevent 2 lighting effects from occuring at the
	  same time.
	* exult.cc : + and - now do gamma correction.
	* palette.* : New methods so palette class could be used by Flics
	* audio/xmidi.* : Now uses Gamma Table Class
	* flic/playfli.* : Changes to use Palette class and methods to get the
	  palette
	* gumps/Paperdoll_gump : Some fixes. Defining SHOW_USECODE_CONTAINER will
	  show the usecode container as a backpack in the upperleft.
	* imagewin/iwin8.* : Three Channel Gamma Correction ability added
	* objs/contain.h : Gump for usecode container.

2001-01-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>