@@ -4,7 +4,9 @@
 2001-01-10  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Weather intrinsics implemented, also 'Ambrosia' rain.
-
+	* Update all timers upon game pause/resume.
+	* Removed delay from Talk_schedule.
+	
 2001-01-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* files/utils.cc: always #include <unistd.h> (not just on MacOS)
 
